004-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: workshop02-dc
  namespace: workshop02
spec:
  replicas: 2
  selector:
    deploymentconfig: workshop02-dc
  strategy:
    type: Recreate
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - workshop2
        from:
          kind: ImageStreamTag
          name: workshop02:latest
      type: ImageChange
  template:
    metadata:
      labels:
        deploymentconfig: workshop02-dc
        name: workshop02
    spec:
      containers:
        - image: workshop02
          imagePullPolicy: Always
          name: workshop02
          ports:
            - containerPort: 8080
              name: nodejs
              protocol: TCP
          terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
