003-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop02-svc
  namespace: workshop02
spec:
  selector:
    deploymentconfig: workshop02-dc
  ports:
    - name: nodejs
      protocol: TCP
      port: 8080
      targetPort: 8080
