005-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: workshop02-route
  namespace: workshop02
spec:
  to:
    kind: Service
    name: workshop02-svc
